syntax = "proto3";

package setupMsgpb;

option go_package = "../setupMsgpb";

// The SetupMsgHandle service definition.
service SetupMsgHandle {
  // Handles a received SetupMsg message
  rpc SetupMsgReceive (SetupMsg) returns (SetupMsgResponse) {}
}

message SetupMsg {
  int64 id = 1;
  string ip = 2;
  string localPubKey = 3;
  string localPrivKey = 4;
  int64 SecretShareI = 5;
  string SecretShareV = 6;
  string GlobalPubKey = 7;
  repeated string ips = 8;
  repeated string pubKeys = 9;
  string pubPolyBase = 10;
  repeated string pubPolyCommit = 11;
}

message SetupMsgResponse {}